@@ -63,9 +63,13 @@ WIP      Retroarch core MAME 2003 Plus allows to save the MAME XML file needed b
 
 [B]Advanced MAME Launcher | version 0.10.0 | xx xxxxxx 2020[/B]
 
-WIP      In the Setup Plugin CM, Build Fanarts and 3D boxes: add an option to
+WIP      [CORE] In the Setup Plugin CM, Build Fanarts and 3D boxes: add an option to
          build all the Fanarts and 3D boxes at once. Also an option to
          rebuild all missing stuff.
+
+FEATURE  [CORE] New Utility "Show machines with biggest ROMs"
+
+FEATURE  [CORE] New Utility "Show machines with smallest ROMs"
 
 
 [B]Advanced MAME Launcher | version 0.9.12 | 10 February 2020[/B]
